<resources>
    <string name="app_name">ClimbStation</string>
    <string name="top_app_bar_overflow_title">more</string>
    <string name="child_item_title_weight">%s: %.1f kg</string>
    <string name="child_item_title_speed">%s: %s</string>
    <string name="info_popup_title_climb">How to climb</string>
    <string name="info_popup_title_connect">How to connect to ClimbStation</string>
    <string name="info_popup_title_create_custom_climb_profile">How to create custom climb profile</string>
    <string name="info_popup_title_developers">Developers</string>
    <string name="info_popup_instructions_climb">First you must navigate to the \"Climb\" view from the bottom navigation menu. You will then see a screen with multiple items.\n\nOn the top left there is a wall profile which previews all the changes in the ClimbStation machine angles. On the top right you can see a preview of the difficulty level and its components. Under the components there is a \"start\" button which starts the ClimbStation machine.\n\nMake sure you are connected to the ClimbStation machine first before starting the session.\n\nAt the bottom middle of the screen you can select difficulty profiles.\n\nIf you click on the \"manual start\" -button there is also another screen in which you can set a static angle, distance and timer for the climbing session in case you do not want the ClimbStation machine to change the angle during your session.\n\nThat is all, happy climbing!</string>
    <string name="info_popup_instructions_connect">In this menu there is a \"Connect\" section. Click it and it will take you to a view in which the device connection is handled.\n\nFirst make sure you are connected to the interned by WIFI. Then you either input the device serial number in the input field and click next or scan the QR code on the side of the ClimbStation machine.\n\nOnce you are connected, you will be taken to the \"Climb\" view in which you can start your climbing session. </string>
    <string name="info_popup_instructions_create_custom_profile">Navigate to the \"Create\" view via the bottom navigation. Add a new profile by clicking the \"ADD PROFILE\" button. It will generate a new item in the view. Next, click on that item and it will take you to another view.\n\nThe climbing profiles are created using steps. You can add a new step by clicking the \"ADD NEW STEP\" button. Each step has a length and angle. You can edit these values by clicking on them. You can add as many steps as you want.\n\nYou can use these newly created custom climbing profiles in the \"Climb\" view of the app. You should see your custom created profiles in the list of routes.</string>
    <string name="info_popup_instructions_developers">Oskar Wiiala\nJoonas Niemi\nPatrik Pölkki</string>
    <string name="bottom_nav_climb">Climb</string>
    <string name="bottom_nav_statistics">Statistics</string>
    <string name="bottom_nav_profile">Profile</string>
    <string name="bottom_nav_settings">Settings</string>
    <string name="fragment_climb_dif_rv_title">test</string>
    <string name="fragment_climb_dif_rv_length_title">Length</string>
    <string name="fragment_climb_dif_rv_length_value">0 m</string>
    <string name="fragment_climb_dif_rv_average_angle_title">Average angle</string>
    <string name="fragment_climb_dif_rv_average_angle_value">0 deg</string>
    <string name="fragment_climb_manual_start_btn">manual start</string>
    <string name="error_connect">\n\nMake sure you have wifi turned on and are connected to ClimbStation machine. Make sure to follow the instructions in the top bar menu info section</string>
    <string name="stop_watch">%02d:%02d:%02d</string>
    <string name="fragment_climb_finished_result_title">%s</string>
    <string name="fragment_climb_finished_result_detail">You climbed %.1f m of your %.1f m goal</string>
    <string name="fragment_climb_finished_difficulty_start">Start difficulty: %s</string>
    <string name="fragment_climb_finished_difficulty_end">End difficulty: %s</string>
    <string name="fragment_climb_finished_mode">Mode: %s</string>
    <string name="fragment_climb_finished_time_title">TIME</string>
    <string name="fragment_climb_finished_time_value">%s</string>
    <string name="fragment_climb_finished_length_title">LENGTH</string>
    <string name="fragment_climb_finished_length_value">%.1f m</string>
    <string name="fragment_climb_finished_calories_title">CALORIES</string>
    <string name="fragment_climb_finished_calories_value">%.1f kcal</string>
    <string name="fragment_climb_finished_speed_title">SPEED</string>
    <string name="fragment_climb_finished_speed_value">%.1f</string>
    <string name="fragment_climb_finished_view_earlier_results">View earlier results</string>
    <string name="fragment_adjust_title">MANUAL START</string>
    <string name="fragment_adjust_length">Distance / m:</string>
    <string name="fragment_adjust_speed">Speed: %d m / min</string>
    <string name="fragment_adjust_mode">Mode:</string>
    <string name="fragment_adjust_start">Start</string>
    <string name="fragment_adjust_duration">Duration</string>
    <string name="fragment_adjust_angle">Angle / °</string>
    <string name="stat_sess_history_item_date">5.11.2021</string>
    <string name="stat_sess_history_item_profile">Athlete</string>
    <string name="stat_sess_history_item_duration_title">Time</string>
    <string name="stat_sess_history_item_duration_value">00:14:57</string>
    <string name="stat_sess_history_item_distance_title">Distance</string>
    <string name="stat_sess_history_item_distance_value">28.3 m</string>
    <string name="fragment_settings_title">SETTINGS</string>
    <string name="fragment_settings_weight">Weight: %.1f kg</string>
    <string name="fragment_settings_btn_edit">Edit</string>
    <string name="weight_prompt_title">Enter your weight</string>
    <string name="weight_prompt_kg">kg</string>
    <string name="content_description_overflow_icon">top navigation menu</string>
    <string name="content_description_climbstation_logo_image">ClimbStation logo</string>
    <string name="content_description_fragment_climb_finished_graph">Graph displaying climbing angles</string>
    <string name="content_description_fragment_climb_finished_btn_to_statistics">View earlier results</string>
    <string name="content_description_history_delete">Delete history item</string>
    <string name="content_description_fragment_adjust_start_btn">Start climbing session</string>
    <string name="content_description_weight_title">Enter your weight in kilograms</string>
    <string name="content_description_weight_input">Enter weight here</string>
    <string name="content_description_weight_kg">Kilograms</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="congratulations">Congratulations</string>
    <string name="error">Error</string>
    <string name="warning">Warning</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="skip">Skip</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="saved">Saved</string>
    <string name="profile_saved_successfully">Profile saved successfully</string>
    <string name="day_short">D</string>
    <string name="week_short">W</string>
    <string name="month_short">M</string>
    <string name="year_short">Y</string>
    <string name="error_while_connecting">We have troubles to connect ClimbStation. Please try again.</string>
    <string name="error_no_profile_selected">No profile selected.</string>
    <string name="error_while_getting_info">We have troubles to get info from ClimbStation.</string>
    <string name="error_no_serial">No serial number set</string>
    <string name="prompt_quit_session">Do you want to quit the session?</string>
    <string name="enter_serial_no">Enter ClimbStation serial number</string>
    <string name="example_no">e.g. 20110001</string>
    <string name="continue_txt">Continue</string>
    <string name="next_txt">Next</string>
    <string name="wall">Wall</string>
    <string name="stats">Stats</string>
    <string name="history">History</string>
    <string name="manual">Manual</string>
    <string name="profiles">Profiles</string>
    <string name="past_7_days">Past 7 days</string>
    <string name="all_time">All time</string>
    <string name="distance">Distance</string>
    <string name="time">Time</string>
    <string name="elapsed_time">Elapsed time</string>
    <string name="burned_calories">Burned calories</string>
    <string name="climbed_distance">Climbed distance</string>
    <string name="current_speed">Current speed</string>
    <string name="total_time">Total time</string>
    <string name="average_speed">Average speed</string>
    <string name="climb_again">Climb again</string>
    <string name="finish">Finish</string>
    <string name="edit">Edit</string>
    <string name="enter_name">Enter name</string>
    <string name="give_name_to_custom_profile">Give name to your custom profile</string>
    <string name="filter_list">Filter list</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="filter">Filter</string>
    <string name="clear">Clear</string>
    <string name="filter_month_year">%s %d</string>
    <string name="share">Share</string>
    <string name="not_valid_profile">Not a valid profile</string>
    <string name="wifi_into_text">Make sure that you are connected to ClimbStations wifi network.\n\nThen press NEXT.</string>
    <string name="length">Length</string>
    <string name="speed">Speed</string>
    <string name="angle">Angle</string>
    <string name="profiles_default">Default</string>
    <string name="profiles_custom">Custom</string>
    <string name="difficulty_profiles">Difficulty profiles</string>
    <string name="speedLong">%d m/min</string>
    <string name="distanceLong">%.1f meters</string>
    <string name="angleLong">%.1f degrees</string>
    <string name="meter_short">m</string>
    <string name="kcal">kcal</string>
    <string name="meters_per_minutes">m/min</string>
    <string name="speedShort">%d m/min</string>
    <string name="distanceShort">%.0f m</string>
    <string name="caloriesShort">%.3f kcal</string>
    <string name="angleShort">%.1f°</string>
    <string name="angleShortInt">%d°</string>
    <string name="float_single_decimal">%.1f</string>
    <string name="bottom_nav_create">Create</string>
    <string name="camera_alert_title">Camera permission</string>
    <string name="camera_alert_message">App needs camera permission only for reading QR-codes from ClimbStation.\n\nDo you want to grant permission?</string>
    <string name="camera_alert_positive">Grant permission</string>
    <string name="camera_permission_not_granted">Camera permissions not granted</string>
    <string name="read_qr">Read QR-code from ClimbStation</string>
    <string name="click_here_to_enter_serial">Or click here to enter serial number here</string>
    <plurals name="speech_time_climbed_plural">
        <item quantity="one">You have climbed %d minute</item>
        <item quantity="other">You have climbed %d minutes</item>
    </plurals>
    <plurals name="speech_distance_climbed_plural">
        <item quantity="one">You have climbed %d meter</item>
        <item quantity="other">You have climbed %d meters</item>
    </plurals>
    <string name="session_list_year_month">%s %d</string>
    <string name="Step">Step %d</string>
    <string name="steps">Steps</string>
    <string name="save">Save</string>
    <plurals name="session_list_session_count">
        <item quantity="one">%d Session</item>
        <item quantity="other">%d Sessions</item>
    </plurals>
    <string name="sessions_list_empty">No Sessions</string>
    <string name="notification_title">Climbing in progress</string>
    <string name="goaltext">You climbed %.1f meters from the %d-meter goal</string>
</resources>