<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_weight_prompt"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/weight_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight_prompt_title"
        android:contentDescription="@string/content_description_weight_title"
        android:layout_gravity="center"
        android:layout_marginBottom="12dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <EditText
            android:id="@+id/editTextDialogUserInput"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:contentDescription="@string/content_description_weight_input">
            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/weight_prompt_kg"
            android:textSize="24sp"
            android:text="@string/weight_prompt_kg"
            android:contentDescription="@string/content_description_weight_kg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>