<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="fi.climbstationsolutions.climbstation.ui.climb.climbFinished.ClimbFinishedViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout11"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtCongrats"
                style="@style/Theme.ClimbStation.Text.White.AutoTitle1"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/congratulations"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:textColor="@color/black" />

            <include
                android:id="@+id/finished_stats"
                layout="@layout/layout_climb_statistics"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/btnClimbAgain"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView28"
                app:profile="@{viewModel.profileWithSteps}"
                app:session="@{viewModel.sessionWithData}" />

            <Button
                android:id="@+id/btnClimbAgain"
                style="@style/Theme.ClimbStation.Button.Normal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/climb_again"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnFinish"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btnFinish"
                style="@style/Theme.ClimbStation.Button.Normal.Green"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/finish"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btnClimbAgain" />

            <TextView
                android:id="@+id/textView28"
                style="@style/Theme.ClimbStation.Text.White.Text2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textAlignment="center"
                app:goal="@{viewModel.profileWithSteps.steps}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtCongrats"
                app:result="@{viewModel.sessionWithData.data}"
                tools:text="@string/goaltext"
                tools:textColor="@color/black" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/include"
            layout="@layout/loading_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            app:isVisible="@{viewModel.loading}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>