<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="fi.climbstationsolutions.climbstation.ui.init.InitViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/darkened_mountain"
        tools:context=".ui.init.InitActivity">

<!--        <ImageView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="50dp"-->
<!--            android:layout_marginTop="50dp"-->
<!--            android:contentDescription="@string/content_description_climbstation_logo_image"-->
<!--            android:src="@drawable/cropped_logo"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintHorizontal_bias="0.0"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent" />-->

        <TextView
            android:id="@+id/txtInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/enter_serial_no"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/etSerialNo"
            app:layout_constraintEnd_toEndOf="@+id/etSerialNo"
            app:layout_constraintStart_toStartOf="@+id/etSerialNo" />

        <EditText
            android:id="@+id/etSerialNo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="#EBEBEB"
            android:ems="10"
            android:hint="@string/example_no"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="48dp"
            android:paddingHorizontal="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnContinue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:enabled="false"
            android:text="@string/continue_txt"
            app:layout_constraintEnd_toEndOf="@+id/etSerialNo"
            app:layout_constraintStart_toStartOf="@+id/etSerialNo"
            app:layout_constraintTop_toBottomOf="@+id/etSerialNo"
            tools:enabled="true" />

        <ProgressBar
            android:id="@+id/pbLoader"
            style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="@{viewModel.loading ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnContinue"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>